--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,15 @@
   padding: 0;
 }
 
+main {
+  padding: 0 5%;
+  height: 75vh;
+}
+
+a {
+  text-decoration: none;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
