--- a/src/component/navigation/navigation.css
+++ b/src/component/navigation/navigation.css
@@ -1,4 +1,24 @@
+.navContainer {
+  width: 100%;
+  height: 15vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: #f7fbfb;
+}
+
 .linkContainer {
   display: flex;
-  gap: 4rem;
+  gap: 1rem;
+  margin: auto 3rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+@media only screen and (min-width: 992px) {
+  .linkContainer {
+    gap: 4rem;
+    margin: auto 10rem;
+    font-size: 1.4rem;
+  }
 }
