--- a/src/app/posts/page.css
+++ b/src/app/posts/page.css
@@ -24,6 +24,16 @@ h1 {
   border-radius: 20px;
 }
 
+.danger {
+  color: white;
+  background: #f81515;
+  width: 5rem;
+  height: 2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 992px) {
   h1 {
     margin-left: 9rem;
